# esp32-blinky

./: Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
esp32-blinky/: Cargo.toml
esp32-blinky/src/: main.rs
src/: main.rs
