[package]
name = "esp32-blinky"
version = "0.1.0"
authors = ["Nick Pelikan <nick.pelikan@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-blinky"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = "0.35.0"
embedded-hal = "1.0.0"
esp-idf-hal = "0.44.1"
anyhow = "1.0.93"
embedded-svc = "0.28.0"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
